--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -235,5 +235,6 @@ nav:
   - "👨‍🎓 课程学习":
     - study-cs/index.md
     - python/Python-is-important.md
+    - energy/Engineering_Thermodynamics.md
   - "✍ 施工中":
     - wait-for-me.md
