--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -237,5 +237,6 @@ nav:
     - python/Python-is-important.md
     - energy/Engineering_Thermodynamics.md
     - python/algorithms-notebook-in-python.md
+    - python/DeepLearingBasic.md
   - "✍ 施工中":
     - wait-for-me.md
