--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -238,5 +238,6 @@ nav:
     - energy/Engineering_Thermodynamics.md
     - python/algorithms-notebook-in-python.md
     - python/DeepLearingBasic.md
+    - study-cs/《DEEP LEARNING》.md
   - "✍ 施工中":
     - wait-for-me.md
