--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -237,6 +237,6 @@ nav:
     - python/Python-is-important.md
     - python/algorithms-notebook-in-python.md
     - python/DeepLearingBasic.md
-    - energy/Engineering_Thermodynamics.md
+    - energy/Engineering_Thermodynamics
   - "✍ 施工中":
     - wait-for-me.md
