--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -236,7 +236,7 @@ nav:
     - study-cs/index.md
     - python/Python-is-important.md
     - python/algorithms-notebook-in-python.md
+    - energy/Engineering-Thermodynamics.md
     - python/DeepLearingBasic.md
-    - energy/Engineering_Thermodynamics
   - "✍ 施工中":
     - wait-for-me.md
