--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -234,10 +234,14 @@ nav:
       - sci-paper/Load-Forecasting/[Applied Energy]A novel short-term multi-energy load forecasting method for integrated energy system based on feature separation-fusion technology and improved CNN.md
   - "👨‍🎓 学习笔记":
     - study-cs/index.md
-    - python/Python-is-important.md
-    - energy/Engineering_Thermodynamics.md
-    - python/algorithms-notebook-in-python.md
-    - python/DeepLearingBasic.md
-    - study-cs/《DEEP LEARNING》.md
+    - "📑专业课程笔记":
+      - energy/Engineering_Thermodynamics.md
+      - python/Python-is-important.md
+    - python/cs224n-notebook.md
+    #- python/cs231-notebook.md
+    #- python/d2l.md
+  #  - "📊数学学习笔记":
+    #  - math/mathematical-analysis.md
+    #  - math/linear-algebra.md
   - "✍ 施工中":
     - wait-for-me.md
