--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -236,10 +236,10 @@ nav:
       - sci-paper/cs/Bert.md
       - sci-paper/cs/MAE.md
       - sci-paper/cs/ViT.md
-      - sci-paper\cs\Distilling-the-knowledge.md
-      - sci-paper\cs\Noisy-students.md
-      - sci-paper\cs\MoE.md
-      - sci-paper\cs\GAN.md
+      - sci-paper/cs/Distilling-the-knowledge.md
+      - sci-paper/cs/Noisy-students.md
+      - sci-paper/cs/MoE.md
+      - sci-paper/cs/GAN.md
       - sci-paper\cs\
     - "📰综合能源系统":
       - sci-paper/Load-Forecasting/[Applied Energy]A novel short-term multi-energy load forecasting method for integrated energy system based on feature separation-fusion technology and improved CNN.md
