--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -250,6 +250,7 @@ nav:
       - python/Python-is-important.md
     - python/cs224n-notebook.md
     - python/cs231n.md
+    - python/cs224w.md
     - python/d2l.md
     - python/python-something/fluent-python.md
   - "👨‍🎓 Kaggle":
