--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -240,7 +240,7 @@ nav:
       - sci-paper/cs/Noisy-students.md
       - sci-paper/cs/MoE.md
       - sci-paper/cs/GAN.md
-      - sci-paper\cs\
+      - sci-paper/ComputationalPhysics/Transovler.md
     - "📰综合能源系统":
       - sci-paper/Load-Forecasting/[Applied Energy]A novel short-term multi-energy load forecasting method for integrated energy system based on feature separation-fusion technology and improved CNN.md
   - "👨‍🎓 学习笔记":
